added avatar model
