# server-laravel/app/Http/Resources/AvatarLayerResource.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class AvatarLayerResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'layer_number' => $this->layer_number,
+            'layer_name' => $this->layer_name,
+            'image_path' => $this->image_path,
+        ];
+    }
+}
